<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MyActivity$PlaceholderFragment">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/headhead"
            android:layout_gravity="left|top"
            android:id="@+id/imageView" />


    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/formato_headerindex"
        android:gravity="right"
        android:background="#33b5e5"
        android:paddingLeft="180dp"
        android:layout_below="@+id/imageView"
        android:layout_gravity="right" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_marginTop="10dp"
        android:layout_below="@id/imageView1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_centerHorizontal="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textSize="18dp"
                android:textColor="#FF0000"
                android:layout_gravity="center_horizontal"
                android:id="@+id/errores1" />

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/autoridad_solicita"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:showDividers="middle"
                android:layout_marginBottom="14dp"
                android:nestedScrollingEnabled="true"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:id="@+id/tableRow33">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/numero"
                    android:textColor="#003076"
                    android:textSize="18dp"
                    android:layout_marginTop="8dp"
                    android:id="@+id/textView333" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/view1_00_orden"
                    android:maxLength="9"
                    android:inputType="number"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:layout_weight="0.51"
                    android:layout_marginLeft="15dp" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/autoridad_solicita"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:showDividers="middle"
                android:nestedScrollingEnabled="true"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:id="@+id/tableRow">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rut_aut"
                    android:textColor="#003076"
                    android:textSize="18dp"
                    android:layout_marginTop="8dp"
                    android:id="@+id/textView2" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/view1_01_rut"
                    android:maxLength="9"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:layout_weight="0.51"
                    android:hint="Ingresar rut sin puntos ni guiones"
                    android:layout_marginLeft="15dp" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:showDividers="middle"
                android:nestedScrollingEnabled="true"
                android:paddingLeft="10dp"
                android:layout_marginTop="20dp"
                android:paddingRight="10dp"
                android:layout_below="@+id/tableRow"
                android:layout_alignLeft="@+id/tableRow"
                android:layout_alignStart="@+id/tableRow"
                android:id="@+id/tableRow2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#003076"
                    android:textSize="18dp"
                    android:text="@string/nombre_aut"
                    android:layout_marginTop="8dp"
                    android:id="@+id/textView3" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/view1_02_nombre"
                    android:layout_weight="0.51"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:maxLength="35"
                    android:layout_marginLeft="15dp" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:showDividers="middle"
                android:nestedScrollingEnabled="true"
                android:paddingLeft="10dp"
                android:layout_marginTop="20dp"
                android:paddingRight="10dp"
                android:layout_below="@+id/tableRow4"
                android:layout_alignLeft="@+id/tableRow4"
                android:id="@+id/tableRow5">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#003076"
                    android:textSize="18dp"
                    android:text="@string/institucion_aut"
                    android:layout_marginTop="8dp"
                    android:id="@+id/textView4" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/view1_03_institucion"
                    android:layout_weight="0.51"
                    android:maxLength="20"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:layout_marginLeft="15dp" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:showDividers="middle"
                android:nestedScrollingEnabled="true"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/tableRow2"
                android:layout_alignLeft="@+id/tableRow2"
                android:layout_alignStart="@+id/tableRow2"
                android:id="@+id/tableRow3">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cargo_aut"
                    android:textColor="#003076"
                    android:textSize="18dp"
                    android:layout_marginTop="8dp"
                    android:id="@+id/textView5" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/view1_04_cargo"
                    android:layout_weight="0.51"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:maxLength="20"
                    android:layout_marginLeft="15dp" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:showDividers="middle"
                android:nestedScrollingEnabled="true"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/tableRow3"
                android:layout_alignLeft="@+id/tableRow3"
                android:layout_alignStart="@+id/tableRow3"
                android:id="@+id/tableRow4">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unidad_aut"
                    android:layout_marginTop="8dp"
                    android:textColor="#003076"
                    android:textSize="18dp"
                    android:id="@+id/textView6" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/view1_05_unidadjuris"
                    android:layout_weight="0.51"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:maxLength="20"
                    android:layout_marginLeft="15dp" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:showDividers="middle"
                android:nestedScrollingEnabled="true"
                android:paddingLeft="10dp"
                android:layout_marginTop="20dp"
                android:paddingRight="10dp"
                android:id="@+id/tableRow7"
                android:layout_below="@+id/tableRow5"
                android:layout_alignLeft="@+id/tableRow5"
                android:layout_alignStart="@+id/tableRow5">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/numfunc_aut"
                    android:layout_marginTop="8dp"
                    android:textColor="#003076"
                    android:textSize="18dp"
                    android:id="@+id/textView7" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/view1_06_numfunc"
                    android:layout_weight="0.51"
                    android:maxLength="20"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:layout_marginLeft="15dp" />
            </TableRow>


        </LinearLayout>
    </ScrollView>


</RelativeLayout>
